Điều chỉnh các phương thức và phân quyền cho